--- a/pom.xml
+++ b/pom.xml
@@ -10,21 +10,20 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
-        <assembly.version>2.5.5</assembly.version>
-        <fastjson.version>1.2.44</fastjson.version>
+        <java.version>1.10</java.version>
+        <fastjson.version>1.2.49</fastjson.version>
         <commons-exec.version>1.3</commons-exec.version>
         <xstream.version>1.4.10</xstream.version>
-        <junit.version>4.12</junit.version>
         <jsch.version>0.1.54</jsch.version>
-        <slf4j.version>1.8.0-beta0</slf4j.version>
+        <slf4j.version>1.8.0-beta2</slf4j.version>
         <logback.version>1.2.3</logback.version>
-        <guava.version>23.6-jre</guava.version>
+        <guava.version>26.0-jre</guava.version>
         <commons-lang3.version>3.7</commons-lang3.version>
-        <hutool.version>3.3.2</hutool.version>
+        <hutool.version>4.1.8</hutool.version>
         <json-lib.version>2.4</json-lib.version>
         <xom.version>1.2.5</xom.version>
-        <lombok.version>1.16.20</lombok.version>
+        <lombok.version>1.18.2</lombok.version>
+        <junit.version>4.12</junit.version>
     </properties>
 
 
@@ -58,7 +57,7 @@
         </dependency>
         -->
         <dependency>
-            <groupId>com.xiaoleilu</groupId>
+            <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>${hutool.version}</version>
         </dependency>
