--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.7</java.version>
+        <java.version>1.8</java.version>
         <fastjson.version>1.2.49</fastjson.version>
         <commons-exec.version>1.3</commons-exec.version>
         <xstream.version>1.4.18</xstream.version>
@@ -19,11 +19,12 @@
         <logback.version>1.2.3</logback.version>
         <guava.version>26.0-jre</guava.version>
         <commons-lang3.version>3.7</commons-lang3.version>
-        <hutool.version>4.1.19</hutool.version>
+        <hutool.version>5.7.16</hutool.version>
         <json-lib.version>2.4</json-lib.version>
         <xom.version>1.2.5</xom.version>
         <lombok.version>1.18.2</lombok.version>
         <junit.version>4.13.1</junit.version>
+        <guava.version>31.0.1-jre</guava.version>
     </properties>
 
 
@@ -44,18 +45,6 @@
             <artifactId>xstream</artifactId>
             <version>${xstream.version}</version>
         </dependency>
-        <!--
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>${guava.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>${commons-lang3.version}</version>
-        </dependency>
-        -->
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
@@ -82,6 +71,11 @@
             <groupId>com.jcraft</groupId>
             <artifactId>jsch</artifactId>
             <version>${jsch.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
 
         <!-- log -->
